Take out the settings file from the actual release script. No reason to override anything, the settings have should have been pre-configured to support a release.